--- a/src/html/cv.html
+++ b/src/html/cv.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Odda Wako's Resume</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Odda Wako's Projects and Work</title>
   <link rel="stylesheet" href="src/css/styles.css">
+
 </head>
 <body>
 
@@ -13,35 +13,33 @@
     <!-- Add the same header content from index.html -->
     <link rel ="stylesheet" href="../css/styles.css">
     <nav class="navbar navbar-light bg-light justify-content-between">
-      <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
+        <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
             <div class="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-      <ul class="nav-links">
-        <li><a href="../html/index.html">Home</a></li>
-        <li><a href="../html/resume.html">Resume</a></li>
-        <li><a href="../html/cv.html"> CV </a></li>
-        <li><a href="../html/interests.html">Interests</a></li>
-        <li><a href="../html/project.html">Projects</a></li>
-        <li><a href="../html/social-media.html">Social Media</a></li>
-      </ul>
-    </nav>
+        
+        <ul class="nav-links">
+          <li><a href="../html/index.html">Home</a></li>
+          <li><a href="../html/resume.html">Resume</a></li>
+          <li><a href="../html/cv.html"> CV </a></li>
+          <li><a href="../html/interests.html">Interests</a></li>
+          <li><a href="../html/project.html">Projects</a></li>
+          <li><a href="../html/social-media.html">Social Media</a></li>
+        </ul>
+      </nav>
   </header>
 
-  <main>
-    <h1>Resume</h1>
-    <p>Below you can find my resume in PDF format.</p>
-    <iframe src="" width="100%" height="600px"></iframe>
-  </main>
+  <main>    
 
+  </main>
+  <script src="../js/main.js"></script>
   <footer>
     <div class="footer-content">
         <p>&copy; 2023 Odda Wako. All rights reserved.</p>
         <p>Website designed by <a href="https://www.linkedin.com/in/odda-wako-a7a722187/">Odda Wako</a></p>
     </div>
 </footer>
-  <script src="../js/main.js"></script>
 </body>
 </html>
