--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,20 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odda Wako's Digital Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="src/css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  
 
 </head>
-<body>
 
+<body>
+<link rel ="stylesheet" href="../css/styles.css">
   <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Welcome / About Me</a></li>
-        <li><a href="resume.html">Resume/CV</a></li>
-        <li><a href="interests.html">Highlights of Interests/Extracurricular</a></li>
-        <li><a href="projects.html">Highlights-Academic/Projects/Working</a></li>
-        <li><a href="social-media.html">Social Media</a></li>
+
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+      <ul class="nav-links">
+        <li><a href="../html/index.html">Home</a></li>
+        <li><a href="../html/resume.html">Resume</a></li>
+        <li><a href="../html/cv.html"> CV </a></li>
+        <li><a href="../html/interests.html">Interests</a></li>
+        <li><a href="../html/project.html">Projects</a></li>
+        <li><a href="../html/social-media.html">Social Media</a></li>
       </ul>
     </nav>
   </header>
@@ -44,9 +53,14 @@
     <img src="oddawako2.jpg" alt="Odda Wako">
   </main>
 
+ 
+  
   <footer>
-    <!-- Add your footer content here -->
-  </footer>
-  <script src="src/js/main.js"></script>
+    <div class="footer-content">
+        <p>&copy; 2023 Odda Wako. All rights reserved.</p>
+        <p>Website designed by <a href="https://www.linkedin.com/in/odda-wako-a7a722187/">Odda Wako</a></p>
+    </div>
+</footer>
+<script src="../js/main.js"></script>
 </body>
 </html>
