--- a/src/html/interests.html
+++ b/src/html/interests.html
@@ -7,10 +7,29 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="src/css/styles.css">
 </head>
+
 <body>
 
   <header>
+    <link rel ="stylesheet" href="../css/styles.css">
     <!-- Add the same header content from index.html -->
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+      <ul class="nav-links">
+        <li><a href="../html/index.html">Home</a></li>
+        <li><a href="../html/resume.html">Resume</a></li>
+        <li><a href="../html/cv.html"> CV </a></li>
+        <li><a href="../html/interests.html">Interests</a></li>
+        <li><a href="../html/project.html">Projects</a></li>
+        <li><a href="../html/social-media.html">Social Media</a></li>
+      </ul>
+    </nav>
+
   </header>
 
   <main>
@@ -31,8 +50,11 @@
   </main>
 
   <footer>
-    <!-- Add your footer content here -->
-  </footer>
-<script src="src/js/main.js"></script>
+    <div class="footer-content">
+        <p>&copy; 2023 Odda Wako. All rights reserved.</p>
+        <p>Website designed by <a href="https://www.linkedin.com/in/odda-wako-a7a722187/">Odda Wako</a></p>
+    </div>
+</footer>
+  <script src="../js/main.js"></script>
 </body>
 </html>
