--- a/src/html/project.html
+++ b/src/html/project.html
@@ -11,10 +11,64 @@
 
   <header>
     <!-- Add the same header content from index.html -->
+    <link rel ="stylesheet" href="../css/styles.css">
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+      <ul class="nav-links">
+        <li><a href="../html/index.html">Home</a></li>
+        <li><a href="../html/resume.html">Resume</a></li>
+        <li><a href="../html/cv.html"> CV </a></li>
+        <li><a href="../html/interests.html">Interests</a></li>
+        <li><a href="../html/project.html">Projects</a></li>
+        <li><a href="../html/social-media.html">Social Media</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <main>    
+  <main>   
+    <!--Projects list--> 
+    <div class="projects">
+      <h1>Projects</h1>
+      <div class="project">
+        <h2>Project 1</h2>
+        <p>Project 1 description</p>
+        <p>Link to the project </p>
+      </div>
+      <div class="project">
+        <h2>Project 2</h2>
+        <p>Project 2 description</p>
+        
+      </div>
+      <div class="project">
+        <h2>Project 3</h2>
+        <p>Project 3 description</p>
+      </div>
+      <div class="project">
+        <h2>Project 4</h2>
+        <p>Project 4 description</p>
+      </div>
+      <div class="project">
+        <h2>Project 5</h2>
+        <p>Project 5 description</p>
+      </div>
+      <div class="project">
+        <h2>Project 6</h2>
+        <p>Project 6 description</p>
+      </div>
 
   </main>
-  <script src="src/js/main.js"></script>
+  <footer>
+    <div class="footer-content">
+        <p>&copy; 2023 Odda Wako. All rights reserved.</p>
+        <p>Website designed by <a href="https://www.linkedin.com/in/odda-wako-a7a722187/">Odda Wako</a></p>
+    </div>
+</footer>
+  <script src="../js/main.js"></script>
 </body>
+
+</html>
