--- a/src/html/social-media.html
+++ b/src/html/social-media.html
@@ -4,13 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odda Wako's Social Media</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
 
   <header>
     <!-- Add the same header content from index.html -->
+    <link rel ="stylesheet" href="../css/styles.css">
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+      <ul class="nav-links">
+        <li><a href="../html/index.html">Home</a></li>
+        <li><a href="../html/resume.html">Resume</a></li>
+        <li><a href="../html/cv.html"> CV </a></li>
+        <li><a href="../html/interests.html">Interests</a></li>
+        <li><a href="../html/project.html">Projects</a></li>
+        <li><a href="../html/social-media.html">Social Media</a></li>
+      </ul>
+    </nav>
+
   </header>
 
   <main>
@@ -18,26 +34,29 @@
 
     <!-- LinkedIn -->
     <h2>LinkedIn</h2>
-    <a href="https://www.linkedin.com/" target="_blank">Odda Wako's LinkedIn Profile</a>
+    <a href="https://www.linkedin.com/in/odda-wako-a7a722187" target="_blank">Odda Wako's LinkedIn Profile</a>
     <p>LinkedIn is where I showcase my professional experience, skills, and accomplishments. You can find information about my education, work history, and endorsements from colleagues and supervisors. I also share articles and news related to my industry to engage with my network and stay updated on the latest trends.</p>
 
     <!-- GitHub -->
     <h2>GitHub</h2>
-    <a href="https://github.com/" target="_blank">Odda Wako's GitHub Profile</a>
+    <a href="https://github.com/ow8" target="_blank">Odda Wako's GitHub Profile</a>
     <p>My GitHub profile is where I host the source code for my personal projects and contribute to open-source initiatives. By showcasing my projects on GitHub, I demonstrate my technical skills and ability to collaborate with other developers. You can explore my repositories to get a sense of my coding style, interests, and proficiency in various programming languages and frameworks.</p>
 
     <!-- Twitter -->
     <h2>Twitter</h2>
-    <a href="https://twitter.com/" target="_blank">Odda Wako's Twitter Profile</a>
+    <a href="https://twitter.com/odwa5257" target="_blank">Odda Wako's Twitter Profile</a>
     <p>On Twitter, I share my thoughts on technology, industry news, and various programming topics. I also engage with the developer community, participate in discussions, and connect with professionals in the field.
         My Twitter profile provides an insight into my personality and interests, as well as my commitment to staying informed about the latest developments in the tech world.</p>
 
     </main>
   
     <footer>
-      <!-- Add your footer content here -->
-    </footer>
-  
+      <div class="footer-content">
+          <p>&copy; 2023 Odda Wako. All rights reserved.</p>
+          <p>Website designed by <a href="https://www.linkedin.com/in/odda-wako-a7a722187/">Odda Wako</a></p>
+      </div>
+  </footer>
+    <script src="../js/main.js"></script>
   </body>
   </html>
   
