--- a/src/html/cv.html
+++ b/src/html/cv.html
@@ -8,31 +8,33 @@
 
 </head>
 <body>
-
+    <link rel ="stylesheet" href="../css/styles.css">
   <header>
     <!-- Add the same header content from index.html -->
     <link rel ="stylesheet" href="../css/styles.css">
     <nav class="navbar navbar-light bg-light justify-content-between">
-        <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        
-        <ul class="nav-links">
-          <li><a href="../html/index.html">Home</a></li>
-          <li><a href="../html/resume.html">Resume</a></li>
-          <li><a href="../html/cv.html"> CV </a></li>
-          <li><a href="../html/interests.html">Interests</a></li>
-          <li><a href="../html/project.html">Projects</a></li>
-          <li><a href="../html/social-media.html">Social Media</a></li>
-        </ul>
-      </nav>
+      <div class="logo-container">
+        <img src="../images/IMG_1461.JPG" alt="Logo" class="logo">
+      </div>
+      <ul class="nav-links">
+        <li><a href="../html/index.html">Home</a></li>
+        <li><a href="../html/resume.html">Resume</a></li>
+        <li><a href="../html/cv.html"> CV </a></li>
+        <li><a href="../html/interests.html">Interests</a></li>
+        <li><a href="../html/project.html">Projects</a></li>
+        <li><a href="../html/social-media.html">Social Media</a></li>
+      </ul>
+      <a href="https://github.com/ow8" target="_blank">
+        <img src="../images/github-mark/github-mark-white.png" alt="GitHub" width="32" height="32" class="github-logo">
+    </a>
+    </nav>
   </header>
 
-  <main>    
-
+  <main>
+    <h1>Resume</h1>
+    <p>Below you can find my resume in PDF format.</p>
+    <iframe src="https://docs.google.com/document/d/10BOJwFMWIyq2v-WWCNy7AI9sR_tm-LXisbk5ujgSBg4/edit?usp=sharing" width="100%" height="600px"></iframe>
+    <a href="https://docs.google.com/document/d/10BOJwFMWIyq2v-WWCNy7AI9sR_tm-LXisbk5ujgSBg4/edit?usp=sharing" download>Download Resume</a>
   </main>
   <script src="../js/main.js"></script>
   <footer>
@@ -40,6 +42,7 @@
         <p>&copy; 2023 Odda Wako. All rights reserved.</p>
         <p>Website designed by <a href="https://www.linkedin.com/in/odda-wako-a7a722187/">Odda Wako</a></p>
     </div>
+    <link rel ="stylesheet" href="../css/styles.css">
 </footer>
 </body>
 </html>
