--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odda Wako's Digital Portfolio</title>
   <link rel="stylesheet" href="../css/styles.css">
-  
-
 </head>
 
 <body>
@@ -14,12 +12,9 @@
   <header>
 
     <nav class="navbar navbar-light bg-light justify-content-between">
-      <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+      <div class="logo-container">
+        <img src="../images/IMG_1461.JPG" alt="Logo" class="logo">
+      </div>
       <ul class="nav-links">
         <li><a href="../html/index.html">Home</a></li>
         <li><a href="../html/resume.html">Resume</a></li>
@@ -28,6 +23,9 @@
         <li><a href="../html/project.html">Projects</a></li>
         <li><a href="../html/social-media.html">Social Media</a></li>
       </ul>
+      <a href="https://github.com/ow8" target="_blank">
+        <img src="../images/github-mark/github-mark-white.png" alt="GitHub" width="32" height="32" class="github-logo">
+    </a>
     </nav>
   </header>
 
@@ -49,8 +47,9 @@
       <!-- Explanation of what visitors will find on the portfolio -->
       In this portfolio, you will find detailed information about my education, work experience, and projects, as well as highlights of my interests and extracurricular activities. Additionally, you can explore my social media profiles to learn more about my personal brand and connect with me on various platforms.
     </p>
-    <img src="oddawako.jpg" alt="Odda Wako">
-    <img src="oddawako2.jpg" alt="Odda Wako">
+
+
+    
   </main>
 
  
@@ -60,6 +59,7 @@
         <p>&copy; 2023 Odda Wako. All rights reserved.</p>
         <p>Website designed by <a href="https://www.linkedin.com/in/odda-wako-a7a722187/">Odda Wako</a></p>
     </div>
+    <link rel ="stylesheet" href="../css/styles.css">
 </footer>
 <script src="../js/main.js"></script>
 </body>
