--- a/src/html/resume.html
+++ b/src/html/resume.html
@@ -13,12 +13,9 @@
     <!-- Add the same header content from index.html -->
     <link rel ="stylesheet" href="../css/styles.css">
     <nav class="navbar navbar-light bg-light justify-content-between">
-      <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+      <div class="logo-container">
+        <img src="../images/IMG_1461.JPG" alt="Logo" class="logo">
+      </div>
       <ul class="nav-links">
         <li><a href="../html/index.html">Home</a></li>
         <li><a href="../html/resume.html">Resume</a></li>
@@ -27,13 +24,17 @@
         <li><a href="../html/project.html">Projects</a></li>
         <li><a href="../html/social-media.html">Social Media</a></li>
       </ul>
+      <a href="https://github.com/ow8" target="_blank">
+        <img src="../images/github-mark/github-mark-white.png" alt="GitHub" width="32" height="32" class="github-logo">
+    </a>
     </nav>
   </header>
 
   <main>
     <h1>Resume</h1>
     <p>Below you can find my resume in PDF format.</p>
-    <iframe src="" width="100%" height="600px"></iframe>
+    <iframe src="https://docs.google.com/document/d/13Rtm_fVe8rI1opLowL6_DZmJx46rS-ls/edit?usp=sharing&ouid=114373470183752508981&rtpof=true&sd=true" width="100%" height="600px"></iframe>
+    <a href="https://docs.google.com/document/d/13Rtm_fVe8rI1opLowL6_DZmJx46rS-ls/edit?usp=sharing&ouid=114373470183752508981&rtpof=true&sd=true" download>Download Resume</a>
   </main>
 
   <footer>
@@ -41,6 +42,7 @@
         <p>&copy; 2023 Odda Wako. All rights reserved.</p>
         <p>Website designed by <a href="https://www.linkedin.com/in/odda-wako-a7a722187/">Odda Wako</a></p>
     </div>
+    <link rel ="stylesheet" href="../css/styles.css">
 </footer>
   <script src="../js/main.js"></script>
 </body>
