--- a/src/html/social-media.html
+++ b/src/html/social-media.html
@@ -11,12 +11,9 @@
     <!-- Add the same header content from index.html -->
     <link rel ="stylesheet" href="../css/styles.css">
     <nav class="navbar navbar-light bg-light justify-content-between">
-      <a href="#"><img src="../images/IMG_1461.JPG" alt="Your Logo" class="logo"></a>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+      <div class="logo-container">
+        <img src="../images/IMG_1461.JPG" alt="Logo" class="logo">
+      </div>
       <ul class="nav-links">
         <li><a href="../html/index.html">Home</a></li>
         <li><a href="../html/resume.html">Resume</a></li>
@@ -25,6 +22,9 @@
         <li><a href="../html/project.html">Projects</a></li>
         <li><a href="../html/social-media.html">Social Media</a></li>
       </ul>
+      <a href="https://github.com/ow8" target="_blank">
+        <img src="../images/github-mark/github-mark-white.png" alt="GitHub" width="32" height="32" class="github-logo">
+    </a>
     </nav>
 
   </header>
@@ -55,6 +55,7 @@
           <p>&copy; 2023 Odda Wako. All rights reserved.</p>
           <p>Website designed by <a href="https://www.linkedin.com/in/odda-wako-a7a722187/">Odda Wako</a></p>
       </div>
+      <link rel ="stylesheet" href="../css/styles.css">
   </footer>
     <script src="../js/main.js"></script>
   </body>
