--- a/src/html/social-media.html
+++ b/src/html/social-media.html
@@ -34,21 +34,38 @@
 
     <!-- LinkedIn -->
     <h2>LinkedIn</h2>
-    <a href="https://www.linkedin.com/in/odda-wako-a7a722187" target="_blank">Odda Wako's LinkedIn Profile</a>
-    <p>LinkedIn is where I showcase my professional experience, skills, and accomplishments. You can find information about my education, work history, and endorsements from colleagues and supervisors. I also share articles and news related to my industry to engage with my network and stay updated on the latest trends.</p>
+    <div class="social-media">
+      <a href="https://www.linkedin.com/in/odda-wako-a7a722187" target="_blank" class="social-icon">
+        <img src="../images/LinkedIn-Blue-26@2x.png" alt="LinkedIn">
+        <span class="tooltip">LinkedIn</span>
+      </a>
+      <bl>
+        
+      </bl>
+      <p>LinkedIn is where I showcase my professional experience, skills, and accomplishments. You can find information about my education, work history, and endorsements from colleagues and supervisors. I also share articles and news related to my industry to engage with my network and stay updated on the latest trends.</p>
+
+    </div>
 
     <!-- GitHub -->
     <h2>GitHub</h2>
-    <a href="https://github.com/ow8" target="_blank">Odda Wako's GitHub Profile</a>
-    <p>My GitHub profile is where I host the source code for my personal projects and contribute to open-source initiatives. By showcasing my projects on GitHub, I demonstrate my technical skills and ability to collaborate with other developers. You can explore my repositories to get a sense of my coding style, interests, and proficiency in various programming languages and frameworks.</p>
+    <div class="social-media-container">
+      <a href="https://github.com/ow8" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+      <p>My GitHub profile is where I host the source code for my personal projects and contribute to open-source initiatives. By showcasing my projects on GitHub, I demonstrate my technical skills and ability to collaborate with other developers. You can explore my repositories to get a sense of my coding style, interests, and proficiency in various programming languages and frameworks.</p>
+    </div>
 
     <!-- Twitter -->
     <h2>Twitter</h2>
-    <a href="https://twitter.com/odwa5257" target="_blank">Odda Wako's Twitter Profile</a>
-    <p>On Twitter, I share my thoughts on technology, industry news, and various programming topics. I also engage with the developer community, participate in discussions, and connect with professionals in the field.
+    <div class="social-media-container">
+      <a href="https://twitter.com/odwa5257" target="_blank">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <p>On Twitter, I share my thoughts on technology, industry news, and various programming topics. I also engage with the developer community, participate in discussions, and connect with professionals in the field.
         My Twitter profile provides an insight into my personality and interests, as well as my commitment to staying informed about the latest developments in the tech world.</p>
+    </div>
 
-    </main>
+  </main>
   
     <footer>
       <div class="footer-content">
